
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
void discard_hunk_line(void *priv,
         long ob, long on, long nb, long nn,
         const char *func, long funclen)
{
}
